prototypes/p5b/tests/invalid/20_mutable_global_state.hll
// INVALID: mutable global state — top-level mutable variable
module globals

let mut counter = 0

function increment() -> Int {
    counter = counter + 1
    counter
}
